--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ecomm-app",
   "version": "0.1.0",
-  "homepage": "https://github.com/Brijesh1990/daharmiecom.github.io.git/react-gh-pages",
   "private": true,
+  "homepage": "https://Brijesh1990/yashrajecommreactjsapp.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -16,10 +16,10 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
